--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "firebase-functions": "^5.1.0"
   }
-
 }
