--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase-functions": "^5.1.0"
   }
